fix: repair damage detection pipeline and expand training dataset
- YoloDamageDetectionTranslator: add transpose guard so DJL tensor
  layout [8400,32] is normalised to [32,8400] before reading class scores
  (bbox pixel coords were being misread as confidence values → crash)
- Fix bbox denormalization: remove spurious ratio* factor; divide by
  content area (INPUT_SIZE - 2*pad) only
- YoloModelLoader: always overwrite DJL cache from JAR on startup so a
  stale cached model can never cause class-count mismatches after retrain
- Expand training dataset: add 71 train + 11 val Kaggle images with
  COCO→YOLO converted labels; add val annotation JSON files
- Retrain YOLOv8n on expanded 142-image corpus (mAP50 0.399 → 0.717)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>